--- a/FreshersApp.API/bin/Cotopaxi.API.dll.config
+++ b/FreshersApp.API/bin/Cotopaxi.API.dll.config
@@ -10,9 +10,12 @@
 
 
   <connectionStrings>
-	  <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=103.133.214.197;Database=DigiOfficeNew;User Id=sa; Password=P@ssw0rd;" />
-	  <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=23.101.22.93,1401\sqlexpress;Database=FreshersApp;User Id=Amaze-Admin; Password=Windflower@123;" />-->
+
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=103.133.214.197;Database=DigiOfficeNew;User Id=sa; Password=P@ssw0rd;" />
+
+	  <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=103.133.214.197;Database=DigiOfficeNew;User Id=sa; Password=P@ssw0rd;" />-->
+	  <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=23.101.22.93,1401\sqlexpress;Database=FreshersApp;User Id=Amaze-Admin; Password=Windflower@123;" />-->
+
 
 	  <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=14.192.17.225\sqlexpress;Database=FreshersApp;User Id=sa; Password=P@ssw0rd;" />-->
    
